# Deception-Honesty-Axis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: colab_8b_pipeline.md
notebooks/: 01_colab_bootstrap_and_smoketest.ipynb
scripts/: analyze_activation_row_transfer_pc_projection_sweep.py  analyze_activation_row_transfer_subspace_baselines.py  analyze_behavior_axis_pc_clusters.py  analyze_dataset_geometry.py  analyze_external_sycophancy_dataset.py  analyze_greedy_search_evolution.py  analyze_role_logit_lens.py  analyze_sycophancy_pair_rankings.py  audit_corpus.py  audit_persona_coordinates_inputs.py  build_axis_catalog.py  build_curated_variant_sources.py  build_imt_axis_bundle.py  build_imt_bank.py  build_paper_axis_figures.py  build_role_axis_bundle.py  build_role_vectors.py  build_unified_role_axis_bundle.py  compare_activation_row_transfer_runs.py  compare_imt_transfer_runs.py  compare_role_axis_zero_shot_runs.py  compare_sycophancy_probe_runs.py  evaluate_activation_row_transfer.py  evaluate_activation_row_transfer_multi_pc_projection.py  evaluate_activation_row_transfer_pc_projection.py  evaluate_activation_row_transfer_pc_projection_sweep.py  evaluate_activation_row_transfer_subspace_baselines.py  evaluate_behavior_axis.py  evaluate_behavior_axis_pc_sweep.py  evaluate_imt_transfer.py  evaluate_persona_coordinates_probe.py  evaluate_role_axis_transfer.py  evaluate_sycophancy_activation_probe.py  extract_activations.py  extract_external_sycophancy_activations.py  extract_sycophancy_activations.py  fit_imt_axes.py  generate_rollouts.py  (+18 more)
(+290 files in other folders)
